0030217: Intersection between a circle and a line not detected WHEN TANGENT

* 2D intersector takes into account the given tolerance when intersects line with circle.
* Extrema curve-curve executes parametric branch in case of analytical has given zero solutions.
* Command 'intersect' has been improved to show additional information about the area of tangency (start and end parameters on each curve).